apps/rancher/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rancher-route
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"    
spec:
  parentRefs:
    - name: traefik
      namespace: traefik

  hostnames:
    - "rancher.tequila.megakuul.ch"

  rules:
    - matches:
        - path: 
            type: PathPrefix
            value: /
      backendRefs:
        - name: rancher
          port: 80
